--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
       </nav>
 
-      <img src = "steph.JPG"  height = "450"  alt="Picture of Stephanie" class="selfimg">
+      <img src = "steph.jpg"  height = "450"  alt="Picture of Stephanie" class="selfimg">
     <div id="name">
       <h1> Stephanie Matos </h1>
       <p>An aspiring engineer looking to change the world with innovative unique technology. </p>
